--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "body-parser": "^1.20.2"
-  }
+  "express": "^4.19.2",
+  "body-parser": "^1.20.2",
+  "@supabase/supabase-js": "^2.45.4"
 }
