--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-  "express": "^4.19.2",
-  "body-parser": "^1.20.2",
-  "@supabase/supabase-js": "^2.45.4"
+    "express": "^4.19.2",
+    "body-parser": "^1.20.2",
+    "@supabase/supabase-js": "^2.45.4"
+  }
 }
