--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "captiochat-portal",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
+  "engines": { "node": ">=18" },
   "scripts": {
     "start": "node app.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.19.2",
     "body-parser": "^1.20.2",
-    "@supabase/supabase-js": "^2.45.4"
+    "express": "^4.19.2"
   }
 }
