--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "captiochat-portal",
   "version": "1.0.0",
   "type": "module",
-  "engines": { "node": ">=18" },
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
